--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="pt-br">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="style.css">
   <title>Tudo Pronto!</title>
 </head>
@@ -11,11 +10,8 @@
     <div class="black">
       <div>
         <div class="question">
-          <h1>Tudo Pronto!</h1>
-          <p>Clique no botão abaixo para continuar</p>
-        </div>
-        <div class="answer">
-          <a class="btn" href="https://protocolozerobarriga.com/">CONTINUAR</a>
+          <h1>Seja bem vindo!</h1>
+          <p>Sinta-se á vontade em nossa empresa.</p>
         </div>
       </div>    
     </div>
