--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
-  <title>Bem Vindo</title>
+  <title>Nossa Empresa</title>
 </head>
 <body> 
   <div class="container">
