--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <title>Nossa Empresa</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
 </head>
 <body> 
   <div class="container">
